--- a/angularapp1/src/app/course/course.component.css
+++ b/angularapp1/src/app/course/course.component.css
@@ -7,9 +7,11 @@ input[type="text"]
     background: transparent;
     border: none;
 }
-/* .button{
-    text-align: end;
-} */
+label{
+    padding: 4px;
+    color:#fcf6f5ff;
+    font-weight:400;
+}
 #sbox{
     margin-left: 20%;
     margin-top: 2%;
