--- a/angularapp1/src/app/course/course.component.html
+++ b/angularapp1/src/app/course/course.component.html
@@ -1,9 +1,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<link
-    rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=Rubik:400,700"/>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik:400,700" />
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -20,54 +18,67 @@
       <li><a routerLink="/userreview">Review</a></li>
 
       <li><a routerLink="/login" style="float:right;"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
-  </div>  
+    </div>
   </div>
 </nav>
 
-<div id="back"> 
-<div class="container">
-<div class="input-group mb-3">
-<input class="form-control" autocomplete="off" id="sbox" placeholder="Which course are you looking for?" aria-label="Search" aria-describedby="search-addon" [(ngModel)]="courseName" (ngModelChange)="Search()"/>
-<div class="input-group-append">
-  <span class="input-group-text btn" id="basic-addon2" style="margin-top: 2%;"><i class="material-icons">search</i></span>
-</div>
-</div>
-</div>
-<div class="button" style="margin-left: 2%;">
-  <p style="display:inline;font-size:medium;font-weight:bold;">For new course : </p>
-  <button id="addc" class="rounded-pill btn btn-success" routerLink="/addcourse"><i class="fa fa-plus"></i> Add Course</button>
-</div>
-<hr style="margin-left:2%;width:95%">
-<br>
-<p style="font-family: 'Roboto', sans-serif;margin-left:2%;font-size:medium;font-weight:bold;">Available Courses :</p>
-<br>
-<form action="" id="addCourse" style="margin-top: 4em; display: inline;" *ngFor="let cou of courses;  let i=index;">
-  <div style="display:inline-block;vertical-align:middle;">  
-    <div style="margin-bottom: 2em; margin-left: 2em;background:#2a9a6b;border-radius:10px;padding: 2em; width: 35em;">
-    <label style="padding: 4px;" for="CourseName"><span style="font-size:medium;font-weight:bold;color:#fcf6f5ff;">Course Name : </span><span style="font-size:medium;font-weight:bold;color:rgba(237, 245, 131, 0.993);">{{cou.courseName}}</span><hr></label>
-    <br>
-    <label style="padding: 4px;color:#fcf6f5ff;font-weight:400;" for="courseEnrolled">Number of Students : {{cou.courseEnrolled}}</label>
-    <br>
-    <label style="padding: 4px;color:#fcf6f5ff;font-weight:400;" for="CourseDuration">Course Duration : {{cou.courseDuration}}</label>
-    <br>
-    <label style="padding: 4px;color:#fcf6f5ff;font-weight:400;" for="CourseDescription">Course Description : {{cou.courseDescription}}</label>
-    <br>
-    <label style="padding: 4px;color:#fcf6f5ff;font-weight:400;" for="CourseTiming">Course Available Timings : {{cou.courseTiming}}</label>
-    <br>
-    <br>
-    <div class="button">
-      <button class="btn btn-danger" style="margin-right:10px;" (click)="opensweetalert(cou.courseId)">
-      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16" >
-        <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
-        <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
-      </svg></button>
-      <button class="btn btn-primary" (click)="updateCourse(cou.courseId)"> 
-      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
-        <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
-        <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
-      </svg></button>
+<div id="back">
+  <div class="container">
+    <div class="input-group mb-3">
+      <input class="form-control" autocomplete="off" id="sbox" placeholder="Which course are you looking for?"
+        aria-label="Search" aria-describedby="search-addon" [(ngModel)]="courseName" (ngModelChange)="Search()" />
+      <div class="input-group-append">
+        <span class="input-group-text btn" id="basic-addon2" style="margin-top: 2%;">
+          <i class="material-icons">search</i></span>
+      </div>
     </div>
-    </div>
-  </div> 
-  </form>
   </div>
+  <div class="button" style="margin-left: 2%;">
+    <p style="display:inline;font-size:medium;font-weight:bold;">For new course : </p>
+    <button id="addc" class="rounded-pill btn btn-success" routerLink="/addcourse"><i class="fa fa-plus"></i> Add Course</button>
+  </div>
+  <hr style="margin-left:2%;width:95%">
+  <br>
+  <p style="font-family: 'Roboto', sans-serif;margin-left:2%;font-size:medium;font-weight:bold;">Available Courses :</p>
+  <br>
+  <form action="" id="addCourse" style="margin-top: 4em; display: inline;" *ngFor="let cou of courses;  let i=index;">
+    <div style="display:inline-block;vertical-align:middle;">
+      <div
+        style="margin-bottom: 2em; margin-left: 2em;background:#2a9a6b;border-radius:10px;padding: 2em; width: 35em;">
+        <label for="CourseName"><span style="font-size:medium;font-weight:bold;color:#fcf6f5ff;">Course Name :
+          </span><span
+            style="font-size:medium;font-weight:bold;color:rgba(237, 245, 131, 0.993);">{{cou.courseName}}</span>
+          <hr>
+        </label>
+        <br>
+        <label for="courseEnrolled">Number of Students : {{cou.courseEnrolled}}</label>
+        <br>
+        <label for="CourseDuration">Course Duration : {{cou.courseDuration}}</label>
+        <br>
+        <label for="CourseDescription">Course Description : {{cou.courseDescription}}</label>
+        <br>
+        <label for="CourseTiming">Course Available Timings : {{cou.courseTiming}}</label>
+        <br>
+        <br>
+        <div class="button">
+          <button class="btn btn-danger" style="margin-right:10px;" (click)="opensweetalert(cou.courseId)">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash"
+              viewBox="0 0 16 16">
+              <path
+                d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z" />
+              <path fill-rule="evenodd"
+                d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z" />
+            </svg></button>
+          <button class="btn btn-primary" (click)="updateCourse(cou.courseId)">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+              class="bi bi-pencil-square" viewBox="0 0 16 16">
+              <path
+                d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
+              <path fill-rule="evenodd"
+                d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
+            </svg></button>
+        </div>
+      </div>
+    </div>
+  </form>
+</div>
