--- a/angularapp1/src/app/updatestudent/updatestudent.component.css
+++ b/angularapp1/src/app/updatestudent/updatestudent.component.css
@@ -4,6 +4,8 @@ body {
 }
 #academyBackground {
   background-color: gray;
+  background-repeat: no-repeat;
+  background-size: cover;
   background-image: url("https://images.pexels.com/photos/733852/pexels-photo-733852.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500");
 
 }
