--- a/angularapp1/src/app/updatestudent/updatestudent.component.html
+++ b/angularapp1/src/app/updatestudent/updatestudent.component.html
@@ -214,6 +214,7 @@
           name="maleorfemale"
           #myNameElemtoduration
         >
+          <option selected hidden>Enter Gender</option>
           <option value="Male ">Male</option>
           <option value="Female ">Female</option></select
         ><br /><br /><br />
