--- a/angularapp1/src/app/enrolledcourse/enrolledcourse.component.html
+++ b/angularapp1/src/app/enrolledcourse/enrolledcourse.component.html
@@ -12,8 +12,8 @@
       </div>
       <div class="nav navbar-nav flex-container">
         <li class="active"><a routerLink="/enrolledcourse">Add Enrolled course</a></li>
-        <li><a routerLink="/institute">Academy</a></li>
-        <li><a routerLink="/course">Course</a></li>
+        <li><a routerLink="/viewacademy">Academy</a></li>
+        <li><a routerLink="/displaycourse">Course</a></li>
         <li><a routerLink="/login" style="float:right;"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
     </div>  
     </div>
@@ -32,9 +32,7 @@
         <select class="form-control" placeholder="Enter your Course name"
         [(ngModel)]="enrolledcourse1.ecourseName" name="ecourseName" id="fatherName">
           <option selected hidden>Enter the course name</option>
-          <option>CSE</option>
-          <option>ENTC</option>
-          <option>MECH</option>
+          <option *ngFor="let course of courses" value="{{course.courseName}}">{{course.courseName | uppercase}}</option>
         </select>
     </div><br><br>
       <div  id="firstName" class="form-group">
