--- a/angularapp1/src/app/payment/payment.component.html
+++ b/angularapp1/src/app/payment/payment.component.html
@@ -84,7 +84,7 @@
           <label>
             State
             <br />
-            <select>
+            <select #state>
               <option>Choose State..</option>
               <option>Rajasthan</option>
               <option>Hariyana</option>
