--- a/angularapp1/src/app/updatestudent/updatestudent.component.html
+++ b/angularapp1/src/app/updatestudent/updatestudent.component.html
@@ -212,7 +212,7 @@
           class="form-control"
           id="maleorfemale"
           name="maleorfemale"
-          #myNameElemtoduration
+          #gender
         >
           <option selected hidden>Enter Gender</option>
           <option value="Male ">Male</option>
