--- a/angularapp1/src/app/addstudent/addstudent.component.html
+++ b/angularapp1/src/app/addstudent/addstudent.component.html
@@ -54,7 +54,7 @@
         <div id="maleorfemale" class="form-group">
             <label for="maleOrFemale">Gender</label>
             <!-- <input formControlName="" [(ngModel)]="student.maleOrFemale" id="t1" name="maleOrFemale" id="maleOrFemale" list="l1" class="form-control" placeholder="Enter male or female" required> -->
-           <select [(ngModel)]="student.maleOrFemale" id="t1" name="maleOrFemale" id="maleOrFemale" list="l1" class="form-control" placeholder="Enter male or female" required>
+           <select [(ngModel)]="student.maleOrFemale" id="t1" name="maleOrFemale" id="maleOrFemale" list="l1" class="form-control" placeholder="Enter male or female" required #gender>
             <option value="" selected hidden>Enter Gender</option> 
                 <option>Male</option>
                 <option>Female</option>
