payment ui solved

--- a/angularapp1/src/app/payment/payment.component.html
+++ b/angularapp1/src/app/payment/payment.component.html
@@ -46,8 +46,8 @@
         <div id="address">
           Address
           <input
-            [(ngModel)]="payment.email"
-            name="email"
+            [(ngModel)]="payment.address"
+            name="address"
             formControlName="address"
             type="text"
             name=""
