minor changes fixed

--- a/angularapp1/src/app/addcourse/addcourse.component.html
+++ b/angularapp1/src/app/addcourse/addcourse.component.html
@@ -80,7 +80,7 @@
   </div>
   <div id="courseCenter">
       <div id="addCourseEnrolled" >
-        <p class="text-dark" style="font-size:large; font-weight: 500;">COURSE ENROLLED</p>
+        <p class="text-dark" style="font-size:large; font-weight: 500;">MAXIMUM STUDENTS ENROLLED</p>
           <input formControlName="courseEnrolled" type="text" class="form-control"
           placeholder="Enter no of student enrolled for the course" [(ngModel)]="course.courseEnrolled"
           name="courseEnrolled"><br>
