--- a/angularapp1/src/app/enrolledcourse/enrolledcourse.component.html
+++ b/angularapp1/src/app/enrolledcourse/enrolledcourse.component.html
@@ -171,5 +171,5 @@
   </tr>
   </table>
   </div>
-      <button  [disabled]="!enrolledform.valid" (click)="addenrolledcourse()" id="enrolNowButton" value="Add Enrolled Course" class="btn btn-success" routerLink="/viewacademy">Enroll Course</button>
+      <button  [disabled]="!enrolledform.valid" (click)="addenrolledcourse()" id="enrolNowButton" value="Add Enrolled Course" class="btn btn-success" routerLink="/displaycourse">Enroll Course</button>
   </form>
