--- a/angularapp1/src/app/institute/institute.component.html
+++ b/angularapp1/src/app/institute/institute.component.html
@@ -5,7 +5,7 @@
         <h2 style="color:rgb(247, 247, 247); cursor: pointer;" routerLink="/institute" >Academy</h2>
         <h2 style="color:rgb(253, 253, 253); cursor: pointer;" routerLink="/course">Course</h2>
         <h2 style="color:rgb(253, 253, 253); cursor: pointer;" routerLink="/student">Students</h2>
-        <h2 style="color:rgb(253, 253, 253); cursor: pointer;" routerLink="/userreview">Review</h2>
+        <h2 style="color:rgb(253, 253, 253); cursor: pointer;" routerLink="/adminreview">Review</h2>
 
         <h2 style="color:rgb(255, 255, 255); cursor: pointer;" routerLink="/login">Logout</h2>
     </div>
