--- a/angularapp1/src/app/updateacademy/updateacademy.component.html
+++ b/angularapp1/src/app/updateacademy/updateacademy.component.html
@@ -75,7 +75,7 @@
         </div><br><br>
     </div>
     <div id="academyRight">
-        <button [disabled]="!updateacademyform.valid" (click)="updateacademy()" class="btn btn-success" id="updateacademy">update Academy</button>
+        <button [disabled]="!updateacademyform.valid" (click)="updateacademy()" class="btn btn-success" id="updateacademy" routerLink="/institute">update Academy</button>
     </div>
   </form>
   
