--- a/angularapp1/src/app/student/student.component.html
+++ b/angularapp1/src/app/student/student.component.html
@@ -12,7 +12,7 @@
       <li class="active"><a routerLink="/addstudent">Student</a></li>
       <li><a routerLink="/institute">Academy</a></li>
       <li><a routerLink="/course">Course</a></li>
-      <li><a routerLink="/userreview">Reviews</a></li>
+      <li><a routerLink="/adminreview">Reviews</a></li>
       <li><a routerLink="/payment">Payment</a></li>
       <li><a routerLink="/viewpayment">View Payments</a></li>
       <li><a routerLink="/login" style="float:right;"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
