--- a/angularapp1/src/app/updatecourse/updatecourse.component.html
+++ b/angularapp1/src/app/updatecourse/updatecourse.component.html
@@ -31,6 +31,7 @@
       <small style="color:red;" *ngIf="!updatecourseform.get('courseName').valid && updatecourseform.get('courseName').touched">* Invalid Course Name</small>
   </div>
   <br>
+  
   <div  id="editCourseDuration" >
       <p class="text-dark" style="font-size:large; font-weight: 500;">COURSE DURATION</p>
       <select style="width:170px; height:45px;" class="form-control"  name="fromduration" #courseduration>
@@ -77,7 +78,7 @@
   </div>
   <div id="courseCenter">
       <div id="editCourseEnrolled" >
-        <p class="text-dark" style="font-size:large; font-weight: 500;">COURSE ENROLLED</p>
+        <p class="text-dark" style="font-size:large; font-weight: 500;">MAXIMUM STUDENTS ENROLLED</p>
           <input formControlName="courseEnrolled" type="text" class="form-control"
           placeholder="Enter no of student enrolled for the course" [(ngModel)]="course.courseEnrolled"
           name="courseEnrolled"><br>
@@ -92,7 +93,7 @@
       </div><br><br>
   </div>
   <div id="courseRight">
-      <button [disabled]="!updatecourseform.valid" (click)="updatecourse()" class="btn btn-success" id="updateCourse">Update Course</button>
+      <button [disabled]="!updatecourseform.valid" (click)="updatecourse()" class="btn btn-success" routerLink="/course" id="updateCourse">Update Course</button>
 
   </div>
 </form>
