--- a/angularapp1/src/app/userreview/userreview.component.html
+++ b/angularapp1/src/app/userreview/userreview.component.html
@@ -15,9 +15,8 @@
             <a class="navbar-brand" routerLink="/homepage">School Admission</a>
           </div>
           <div class="nav navbar-nav flex-container">
-            <li ><a routerLink="/addstudent">ADDSTUDENT</a></li>
-            <li><a routerLink="/institute">ACADEMY</a></li>
-            <li><a routerLink="/course">ENROLLED COURSE</a></li>
+            <li><a routerLink="/viewacademy">ACADEMY</a></li>
+            <li><a routerLink="/displaycourse">ENROLLED COURSE</a></li>
             <li><a routerLink="/review">ADD REVIEW</a></li>
             <li ><a routerLink="/login" style="float:right;"><span class="glyphicon glyphicon-log-in"></span> LOGOUT</a></li>
         </div>  
